# distill

./: .gitignore  LICENSE  README.md  pyproject.toml
distill/: __init__.py
distill/cli/: main.py
distill/core/: analyze.py  models.py  transcribe.py
