[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distill-ai"
version = "0.1.0"
description = "Consume long-form content intelligently — YouTube, podcasts, books"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "youtube-transcript-api>=0.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
distill = "distill.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
